[package]
name = "rust-guess"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
crossterm = "0.27.0"
ratatui = "0.26.3"
#unicode-width = "0.1.12"
